# buildsystem

./: README.md
docker/full-install-base/: Dockerfile  README.md
full-install/: CMakeLists.txt
legacy/: CMakeLists.txt  README.md  build.sh  clone_and_build.sh  config.sh  install.sh  rebuild.sh  top_level_build.sh
